# mhlmk-test-project

./: .gitignore  .isort.cfg  pyproject.toml  tox.ini
.github/: pypi.yml
.github/workflows/: pypi.yml
test_project/: main.py
test_project/dog/: dog.py
tests/: test_cat.py  test_dog.py
